--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                 </div>
                 <div class="contenedor_main_invisible_yes">
                     <h2 class="titulo_invisible_yes">¡Escriba sin mente!</h2>
+                    <p class="texto_invisible_yes">Trabajos y asesorías:</p>
+                    <ul class="lista_materias">
+                        <li>>Matemáticas generales</li>
+                        <li>>Álgebra lineal</li>
+                        <li>>Cálculo I, II y III</li>
+                        <li>>Ecuaciones diferenciales</li>
+                        <li>>Programación I, II y III</li>
+                    </ul>
                 </div>
                 <div class="contenedor_main_invisible_no">
 
@@ -52,6 +60,7 @@
                         <a href="https://www.linkedin.com/in/omar-piedrahita-8b6548255/"><img src="lk.svg"></a>
                         <a href="https://github.com/Tylermars666"><img src="gt.svg"></a>
                     </div>
+                    <p class="copyright_footer">Omar Piedrahita</p>
 
                 </div>
     
