Agrego botones de whatsapp y telegram con sus respectivos enlaces

--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
                 </div>
                 <div class="contenedor_main_invisible_yes">
                     <h2 class="titulo_invisible_yes">¡Escriba sin mente!</h2>
+                    <div class="botones_mensaje">
+                        <a href="https://api.whatsapp.com/send?phone=+573207368522&text=Hola,%20puedes%20ayudarme?"><img src="whatsapp_boton.png" id="whatsapp_boton"></a>
+                        <a href="https://t.me/nitroglix"><img src="telegram_boton.png" id="telegram_boton"></a>
+                    </div>
                     <p class="texto_invisible_yes">Trabajos y asesorías:</p>
                     <ul class="lista_materias">
                         <li>>Matemáticas generales</li>
