--- a/index.html
+++ b/index.html
@@ -46,13 +46,21 @@
                     <ul class="lista_materias">
                         <li>>Matemáticas generales</li>
                         <li>>Álgebra lineal</li>
-                        <li>>Cálculo I, II y III</li>
+                        <li>>Cálculo diferencial</li>
+                        <li>>Cálculo integral</li>
+                        <li>>Cálculo multivariado y vectorial</li>
                         <li>>Ecuaciones diferenciales</li>
                         <li>>Programación I, II y III</li>
                     </ul>
                 </div>
                 <div class="contenedor_main_invisible_no">
-
+                    <h2 class="titulo_invisible_no">Respuesta incorrecta</h2>
+                    <div class="contenedor_trollface">
+                        <img src="trollface.png" class="trollface">
+                    </div>
+                    <div class="contenedor_gemidos">
+                        <audio src="gemidos.mp3" type="audio/mp3" id="audio_gemidos"></audio> 
+                    </div>
                 </div>
             </main>
     
