Agregué id para titulos de invisibles y lista de materias

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
                     </div>
                 </div>
                 <div class="contenedor_main_invisible_yes" id="contenedor_si">
-                    <h2 class="titulo_invisible_yes">¡Escriba sin mente!</h2>
+                    <h2 class="titulo_invisible_yes" id="titulo_invisible_yes">¡Escriba sin mente!</h2>
                     <div class="botones_mensaje">
                         <a href="https://api.whatsapp.com/send?phone=+573207368522&text=Hola,%20puedes%20ayudarme?"><img src="whatsapp_boton.png" id="whatsapp_boton"></a>
                         <a href="https://t.me/nitroglix"><img src="telegram_boton.png" id="telegram_boton"></a>
                     </div>
-                    <p class="texto_invisible_yes">Trabajos y asesorías:</p>
-                    <ul class="lista_materias">
+                    <p class="texto_invisible_yes" id="texto_invisible_yes">Trabajos y asesorías:</p>
+                    <ul class="lista_materias" id="lista_materias">
                         <li>>Matemáticas generales</li>
                         <li>>Álgebra lineal</li>
                         <li>>Cálculo diferencial</li>
