Termino funcionalidades de botones para mostrar divs ocultas, pagina totalmente funcional

--- a/index.html
+++ b/index.html
@@ -43,18 +43,17 @@
                         <a href="https://t.me/nitroglix"><img src="telegram_boton.png" id="telegram_boton"></a>
                     </div>
                     <p class="texto_invisible_yes" id="texto_invisible_yes">Trabajos y asesorías:</p>
-                    <ul class="lista_materias" id="lista_materias">
-                        <li>>Matemáticas generales</li>
-                        <li>>Álgebra lineal</li>
-                        <li>>Cálculo diferencial</li>
-                        <li>>Cálculo integral</li>
-                        <li>>Cálculo multivariado y vectorial</li>
-                        <li>>Ecuaciones diferenciales</li>
-                        <li>>Programación I, II y III</li>
+                        <p class="lista_materias" id="1">>Matemáticas generales</p>
+                        <p class="lista_materias" id="2">>Álgebra lineal</p>
+                        <p class="lista_materias" id="3">>Cálculo diferencial</p>
+                        <p class="lista_materias" id="4">>Cálculo integral</p>
+                        <p class="lista_materias" id="5">>Cálculo multivariado y vectorial</p>
+                        <p class="lista_materias" id="6">>Ecuaciones diferenciales</p>
+                        <p class="lista_materias" id="7">>Programación I, II y III</p>
                     </ul>
                 </div>
                 <div class="contenedor_main_invisible_no" id="contenedor_no">
-                    <h2 class="titulo_invisible_no">Respuesta incorrecta</h2>
+                    <h2 class="titulo_invisible_no" id="titulo_invisible_no">Respuesta incorrecta</h2>
                     <div class="contenedor_trollface">
                         <img src="trollface.png" class="trollface">
                     </div>
