Modifico botones sisas y nonas

--- a/index.html
+++ b/index.html
@@ -29,10 +29,10 @@
                     </div>
                     <div class="botones_main">
                         <div class="yes_button">
-                            <input type="button" id="yes_button" value="Sisas" onclick="mostrarSisas()">
+                            <input type="button" id="yes_button" value="Sifilis" onclick="mostrarSisas()">
                         </div>
                         <div class="no_button">
-                            <input type="button" id="no_button" value="Nonas" onclick="mostrarNonas()">
+                            <input type="button" id="no_button" value="Nofolos" onclick="mostrarNonas()">
                         </div>
                     </div>
                 </div>
