Organización de contenido multimedia

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <head>
         <script src="script.js"></script>
         <title>Matemáticas</title>
-        <link rel="icon" href="iconoPI.png">
+        <link rel="icon" href="multimedia/iconoPI.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="reset.css">
@@ -25,7 +25,7 @@
             <main>
                 <div class="contenedor_main_visible" id="contenedor_visible">
                     <div class="imagen_main">
-                        <img src="asado_con_mates.png" id="imagen_main">
+                        <img src="multimedia/asado_con_mates.png" id="imagen_main">
                     </div>
                     <div class="botones_main">
                         <div class="yes_button">
@@ -39,8 +39,8 @@
                 <div class="contenedor_main_invisible_yes" id="contenedor_si">
                     <h2 class="titulo_invisible_yes" id="titulo_invisible_yes">¡Escriba sin mente!</h2>
                     <div class="botones_mensaje">
-                        <a href="https://api.whatsapp.com/send?phone=+573207368522&text=Hola,%20puedes%20ayudarme?"><img src="whatsapp_boton.png" id="whatsapp_boton"></a>
-                        <a href="https://t.me/nitroglix"><img src="telegram_boton.png" id="telegram_boton"></a>
+                        <a href="https://api.whatsapp.com/send?phone=+573207368522&text=Hola,%20puedes%20ayudarme?"><img src="multimedia/whatsapp_boton.png" id="whatsapp_boton"></a>
+                        <a href="https://t.me/nitroglix"><img src="multimedia/telegram_boton.png" id="telegram_boton"></a>
                     </div>
                     <p class="texto_invisible_yes" id="texto_invisible_yes">Trabajos y asesorías:</p>
                         <p class="lista_materias" id="1">>Matemáticas generales</p>
@@ -55,10 +55,10 @@
                 <div class="contenedor_main_invisible_no" id="contenedor_no">
                     <h2 class="titulo_invisible_no" id="titulo_invisible_no">Respuesta incorrecta</h2>
                     <div class="contenedor_trollface">
-                        <img src="trollface.png" class="trollface">
+                        <img src="multimedia/trollface.png" class="trollface">
                     </div>
                     <div class="contenedor_gemidos">
-                        <audio src="gemidos.mp3" type="audio/mp3" id="audio_gemidos"></audio> 
+                        <audio src="multimedia/gemidos.mp3" type="audio/mp3" id="audio_gemidos"></audio> 
                     </div>
                 </div>
             </main>
