--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <html lang="es">
 
     <head>
-        <script src="script.js"></script>
+        <script src="js/script.js"></script>
         <title>Matemáticas</title>
         <link rel="icon" href="multimedia/iconoPI.png">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="reset.css">
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/style.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300&display=swap" rel="stylesheet">
@@ -67,9 +67,9 @@
                 <div class="contenedor_footer">
                     <p class="texto_footer">Do you wanna know anything else?</p>
                     <div class="redes_footer">
-                        <a href="https://www.instagram.com/tyler.marss/"><img src="ig.svg"></a>
-                        <a href="https://www.linkedin.com/in/omar-piedrahita-8b6548255/"><img src="lk.svg"></a>
-                        <a href="https://github.com/Tylermars666"><img src="gt.svg"></a>
+                        <a href="https://www.instagram.com/tyler.marss/"><img src="multimedia/ig.svg"></a>
+                        <a href="https://www.linkedin.com/in/omar-piedrahita-8b6548255/"><img src="multimedia/lk.svg"></a>
+                        <a href="https://github.com/Tylermars666"><img src="multimedia/gt.svg"></a>
                     </div>
                     <p class="copyright_footer">Omar Piedrahita</p>
 
